# backtracexx

./: AUTHOR  CMakeLists.txt  LICENSE  README.md  backtracexx.cpp  backtracexx.hpp  example.cpp  makefile  makefile.mingw
msvc/: msvc.sln
msvc/backtracexx/: backtracexx.vcproj
msvc/example/: example.vcproj
